Further checks to sync qvdclient to xvncpro